@@ -78,140 +78,141 @@ const struct Action {
 	Exult_Game game;
 	bool allow_during_dont_move;
 	bool allow_if_cant_act;
+	bool allow_if_cant_act_charmed;
 } ExultActions[] = {
-	{ "QUIT", ActionQuit, 0, "Quit", Action::normal_keys, NONE, true, true },
-	{ "SAVE_RESTORE", ActionFileGump, 0, "Save/restore", Action::normal_keys, NONE, true, true },
-	{ "QUICKSAVE", ActionQuicksave, 0, "Quick-save", Action::normal_keys, NONE, false, true },
+	{ "QUIT", ActionQuit, 0, "Quit", Action::normal_keys, NONE, true, true, true },
+	{ "SAVE_RESTORE", ActionFileGump, 0, "Save/restore", Action::normal_keys, NONE, true, true, true },
+	{ "QUICKSAVE", ActionQuicksave, 0, "Quick-save", Action::normal_keys, NONE, false, true, true },
 	{ "QUICKRESTORE", 
-	  ActionQuickrestore, 0, "Quick-restore", Action::normal_keys, NONE, true, true },
-	{ "ABOUT", ActionAbout, 0, "About Exult", Action::normal_keys, NONE, false, true },
-	{ "HELP", ActionHelp, 0, "List keys", Action::normal_keys, NONE, false, true },
-	{ "CLOSE_GUMPS", ActionCloseGumps, 0, "Close gumps", Action::dont_show, NONE, false, true },
-	{ "CLOSE_OR_MENU", ActionCloseOrMenu, 0, "Game menu", Action::normal_keys, NONE, true, true },
+	  ActionQuickrestore, 0, "Quick-restore", Action::normal_keys, NONE, true, true, true },
+	{ "ABOUT", ActionAbout, 0, "About Exult", Action::normal_keys, NONE, false, true, true },
+	{ "HELP", ActionHelp, 0, "List keys", Action::normal_keys, NONE, false, true, true },
+	{ "CLOSE_GUMPS", ActionCloseGumps, 0, "Close gumps", Action::dont_show, NONE, false, true, true },
+	{ "CLOSE_OR_MENU", ActionCloseOrMenu, 0, "Game menu", Action::normal_keys, NONE, true, true, true },
 	{ "SCREENSHOT",
-	  ActionScreenshot, 0, "Take screenshot", Action::normal_keys, NONE, true, true },
-	{ "GAME_MENU", ActionMenuGump, 0, "Game Menu", Action::normal_keys, NONE, true, true },
+	  ActionScreenshot, 0, "Take screenshot", Action::normal_keys, NONE, true, true, true },
+	{ "GAME_MENU", ActionMenuGump, 0, "Game Menu", Action::normal_keys, NONE, true, true, true },
 	{ "OLD_FILE_GUMP",
-	  ActionOldFileGump, 0, "Save/restore", Action::normal_keys, NONE, true, true },
+	  ActionOldFileGump, 0, "Save/restore", Action::normal_keys, NONE, true, true, true },
 #ifdef UNDER_CE
-	{ "MINIMIZE_GAME", ActionMinimizeGame, 0, "Minimize game", Action::normal_keys, NONE, true, true },
-	{ "TOUCHSCREEN_MODE", ActionTouchscreenMode, 0, "Touchscreen mode", Action::normal_keys, NONE, true, true },
-	{ "KEYBOARD_POSITION", ActionKeyboardPosition, 0, "Keyboard position", Action::normal_keys, NONE, true, true },
-	{ "KEYBOARD_MODE", ActionKeyboardMode, 0, "Keyboard mode", Action::normal_keys, NONE, true, true },
+	{ "MINIMIZE_GAME", ActionMinimizeGame, 0, "Minimize game", Action::normal_keys, NONE, true, true, true },
+	{ "TOUCHSCREEN_MODE", ActionTouchscreenMode, 0, "Touchscreen mode", Action::normal_keys, NONE, true, true, true },
+	{ "KEYBOARD_POSITION", ActionKeyboardPosition, 0, "Keyboard position", Action::normal_keys, NONE, true, true, true },
+	{ "KEYBOARD_MODE", ActionKeyboardMode, 0, "Keyboard mode", Action::normal_keys, NONE, true, true, true },
 #endif
 
 	{ "RESOLUTION_INCREASE", 
-	  ActionResIncrease, 0, "Increase resolution", Action::cheat_keys, NONE, true, true },
+	  ActionResIncrease, 0, "Increase resolution", Action::cheat_keys, NONE, true, true, true },
 	{ "RESOLUTION_DECREASE", 
-	  ActionResDecrease, 0, "Decrease resolution", Action::cheat_keys, NONE, true, true },
+	  ActionResDecrease, 0, "Decrease resolution", Action::cheat_keys, NONE, true, true, true },
 	{ "BRIGHTER", 
-	  ActionBrighter, 0, "Increase brightness", Action::normal_keys, NONE, true, true },
-	{ "DARKER", ActionDarker, 0, "Decrease brightness", Action::normal_keys, NONE, true, true },
+	  ActionBrighter, 0, "Increase brightness", Action::normal_keys, NONE, true, true, true },
+	{ "DARKER", ActionDarker, 0, "Decrease brightness", Action::normal_keys, NONE, true, true, true },
 	{ "TOGGLE_FULLSCREEN", 
-	  ActionFullscreen, 0, "Toggle fullscreen", Action::normal_keys, NONE, true, true },
+	  ActionFullscreen, 0, "Toggle fullscreen", Action::normal_keys, NONE, true, true, true },
 	
-	{ "USEITEM", ActionUseItem, 0, "Use item", Action::dont_show, NONE, false, false },
-	{ "USEFOOD", ActionUseFood, 0, "Use food", Action::dont_show, NONE, false, false },
-	{ "CALL_USECODE", ActionCallUsecode, 0, "Call Usecode", Action::dont_show, NONE, false, false },
-	{ "TOGGLE_COMBAT", ActionCombat, 0, "Toggle combat", Action::normal_keys, NONE, false, false },
-	{ "PAUSE_COMBAT", ActionCombatPause, 0, "Pause combat", Action::normal_keys, NONE, false, false },
-	{ "TARGET_MODE", ActionTarget, 0, "Target mode", Action::normal_keys, NONE, false, false },
-	{ "INVENTORY", ActionInventory, 0, "Show inventory", Action::normal_keys, NONE, false, false },
-	{ "TRY_KEYS", ActionTryKeys, 0, "Try keys", Action::normal_keys, NONE, false, false },
-	{ "STATS", ActionStats, 0, "Show stats", Action::normal_keys, NONE, false, true },
+	{ "USEITEM", ActionUseItem, 0, "Use item", Action::dont_show, NONE, false, false, false },
+	{ "USEFOOD", ActionUseFood, 0, "Use food", Action::dont_show, NONE, false, false, false },
+	{ "CALL_USECODE", ActionCallUsecode, 0, "Call Usecode", Action::dont_show, NONE, false, false, false },
+	{ "TOGGLE_COMBAT", ActionCombat, 0, "Toggle combat", Action::normal_keys, NONE, false, false, true },
+	{ "PAUSE_COMBAT", ActionCombatPause, 0, "Pause combat", Action::normal_keys, NONE, false, false, true },
+	{ "TARGET_MODE", ActionTarget, 0, "Target mode", Action::normal_keys, NONE, false, false, true },
+	{ "INVENTORY", ActionInventory, 0, "Show inventory", Action::normal_keys, NONE, false, false, true },
+	{ "TRY_KEYS", ActionTryKeys, 0, "Try keys", Action::normal_keys, NONE, false, false, false },
+	{ "STATS", ActionStats, 0, "Show stats", Action::normal_keys, NONE, false, true, true },
 	{ "COMBAT_STATS",
-	  ActionCombatStats, 0, "Show combat stats", Action::normal_keys, SERPENT_ISLE, false, false },
+	  ActionCombatStats, 0, "Show combat stats", Action::normal_keys, SERPENT_ISLE, false, false, true },
 	{ "FACE_STATS",
-	  ActionFaceStats, 0, "Change Face Stats State", Action::normal_keys, NONE, false, true },
+	  ActionFaceStats, 0, "Change Face Stats State", Action::normal_keys, NONE, false, true, true },
 	
 	{ "SHOW_SI_INTRO",
-	  ActionSIIntro, 0, "Show Alternate SI intro", Action::cheat_keys, SERPENT_ISLE, false, true },
-	{ "SHOW_ENDGAME", ActionEndgame, 0, "Show endgame", Action::cheat_keys, NONE, false, true },
-	{ "SCROLL_LEFT", ActionScrollLeft, 0, "Scroll left", Action::cheat_keys, NONE, false, true },
-	{ "SCROLL_RIGHT", ActionScrollRight, 0, "Scroll right", Action::cheat_keys, NONE, false, true },
-	{ "SCROLL_UP", ActionScrollUp, 0, "Scroll up", Action::cheat_keys, NONE, false, true },
-	{ "SCROLL_DOWN", ActionScrollDown, 0, "Scroll down", Action::cheat_keys, NONE, false, true },
-	{ "WALK_WEST", ActionWalkWest, ActionStopWalking, "Walk west", Action::normal_keys, NONE, false, false },
-	{ "WALK_EAST", ActionWalkEast, ActionStopWalking, "Walk east", Action::normal_keys, NONE, false, false },
-	{ "WALK_NORTH", ActionWalkNorth, ActionStopWalking, "Walk north", Action::normal_keys, NONE, false, false },
-	{ "WALK_SOUTH", ActionWalkSouth, ActionStopWalking, "Walk south", Action::normal_keys, NONE, false, false },
-	{ "WALK_NORTH_EAST", ActionWalkNorthEast, ActionStopWalking, "Walk north-east", Action::normal_keys, NONE, false, false },
-	{ "WALK_SOUTH_EAST", ActionWalkSouthEast, ActionStopWalking, "Walk south-east", Action::normal_keys, NONE, false, false },
-	{ "WALK_NORTH_WEST", ActionWalkNorthWest, ActionStopWalking, "Walk north-west", Action::normal_keys, NONE, false, false },
-	{ "WALK_SOUTH_WEST", ActionWalkSouthWest, ActionStopWalking, "Walk south-west", Action::normal_keys, NONE, false, false },
-	{ "CENTER_SCREEN", ActionCenter, 0, "Center screen", Action::cheat_keys, NONE, false, true },
+	  ActionSIIntro, 0, "Show Alternate SI intro", Action::cheat_keys, SERPENT_ISLE, false, true, true },
+	{ "SHOW_ENDGAME", ActionEndgame, 0, "Show endgame", Action::cheat_keys, NONE, false, true, true },
+	{ "SCROLL_LEFT", ActionScrollLeft, 0, "Scroll left", Action::cheat_keys, NONE, false, true , true},
+	{ "SCROLL_RIGHT", ActionScrollRight, 0, "Scroll right", Action::cheat_keys, NONE, false, true, true },
+	{ "SCROLL_UP", ActionScrollUp, 0, "Scroll up", Action::cheat_keys, NONE, false, true, true },
+	{ "SCROLL_DOWN", ActionScrollDown, 0, "Scroll down", Action::cheat_keys, NONE, false, true, true },
+	{ "WALK_WEST", ActionWalkWest, ActionStopWalking, "Walk west", Action::normal_keys, NONE, false, false, false },
+	{ "WALK_EAST", ActionWalkEast, ActionStopWalking, "Walk east", Action::normal_keys, NONE, false, false, false },
+	{ "WALK_NORTH", ActionWalkNorth, ActionStopWalking, "Walk north", Action::normal_keys, NONE, false, false, false },
+	{ "WALK_SOUTH", ActionWalkSouth, ActionStopWalking, "Walk south", Action::normal_keys, NONE, false, false, false },
+	{ "WALK_NORTH_EAST", ActionWalkNorthEast, ActionStopWalking, "Walk north-east", Action::normal_keys, NONE, false, false, false },
+	{ "WALK_SOUTH_EAST", ActionWalkSouthEast, ActionStopWalking, "Walk south-east", Action::normal_keys, NONE, false, false, false },
+	{ "WALK_NORTH_WEST", ActionWalkNorthWest, ActionStopWalking, "Walk north-west", Action::normal_keys, NONE, false, false, false },
+	{ "WALK_SOUTH_WEST", ActionWalkSouthWest, ActionStopWalking, "Walk south-west", Action::normal_keys, NONE, false, false, false },
+	{ "CENTER_SCREEN", ActionCenter, 0, "Center screen", Action::cheat_keys, NONE, false, true, true },
 	{ "SHAPE_BROWSER",
-	  ActionShapeBrowser, 0, "Shape browser", Action::cheat_keys, NONE, false, true },
+	  ActionShapeBrowser, 0, "Shape browser", Action::cheat_keys, NONE, false, true, true },
 	{ "CREATE_ITEM",
-	  ActionCreateShape, 0, "Create last shape", Action::cheat_keys, NONE, false, true },
+	  ActionCreateShape, 0, "Create last shape", Action::cheat_keys, NONE, false, true, true },
 	{ "DELETE_OBJECT", 
-	  ActionDeleteObject, 0, "Delete object", Action::cheat_keys, NONE, false, true },
+	  ActionDeleteObject, 0, "Delete object", Action::cheat_keys, NONE, false, true, true },
 	{ "TOGGLE_EGGS",
-	  ActionToggleEggs, 0, "Toggle egg display", Action::cheat_keys, NONE, false, true },
+	  ActionToggleEggs, 0, "Toggle egg display", Action::cheat_keys, NONE, false, true, true },
 	{ "TOGGLE_GOD_MODE",
-	  ActionGodMode, 0, "Toggle god mode", Action::cheat_keys, NONE, false, true },
+	  ActionGodMode, 0, "Toggle god mode", Action::cheat_keys, NONE, false, true, true },
 	{ "CHANGE_GENDER", 
-	  ActionGender, 0, "Change gender", Action::cheat_keys, NONE, false, true },
+	  ActionGender, 0, "Change gender", Action::cheat_keys, NONE, false, true, true },
 	{ "CHEAT_HELP",
-	  ActionCheatHelp, 0, "List cheat keys", Action::cheat_keys, NONE, false, true },
+	  ActionCheatHelp, 0, "List cheat keys", Action::cheat_keys, NONE, false, true, true },
 	{ "TOGGLE_INFRAVISION",
-	  ActionInfravision, 0, "Toggle infravision", Action::cheat_keys, NONE, false, true },
+	  ActionInfravision, 0, "Toggle infravision", Action::cheat_keys, NONE, false, true, true },
 	{ "TOGGLE_HACK_MOVER",
-	  ActionHackMover, 0, "Toggle hack-mover mode", Action::cheat_keys, NONE, false, true },
+	  ActionHackMover, 0, "Toggle hack-mover mode", Action::cheat_keys, NONE, false, true, true },
 	{ "MAP_TELEPORT",
-	  ActionMapTeleport, 0, "Map teleport", Action::cheat_keys, NONE, false, true },
+	  ActionMapTeleport, 0, "Map teleport", Action::cheat_keys, NONE, false, true, true },
 	{ "CURSOR_TELEPORT",
-	  ActionTeleport, 0, "Teleport to cursor", Action::cheat_keys, NONE, false, true },
+	  ActionTeleport, 0, "Teleport to cursor", Action::cheat_keys, NONE, false, true, true },
 	{ "NEXT_MAP_TELEPORT",
-	  ActionNextMapTeleport, 0, "Teleport to next map", Action::cheat_keys, NONE, false, true },
+	  ActionNextMapTeleport, 0, "Teleport to next map", Action::cheat_keys, NONE, false, true, true },
 	{ "NEXT_TIME_PERIOD",
-	  ActionTime, 0, "Next time period", Action::cheat_keys, NONE, false, true },
+	  ActionTime, 0, "Next time period", Action::cheat_keys, NONE, false, true, true },
 	{ "TOGGLE_WIZARD_MODE",
-	  ActionWizard, 0, "Toggle archwizard mode", Action::cheat_keys, NONE, false, true },
-	{ "PARTY_HEAL", ActionHeal, 0, "Heal party", Action::cheat_keys, NONE, false, true },
+	  ActionWizard, 0, "Toggle archwizard mode", Action::cheat_keys, NONE, false, true, true },
+	{ "PARTY_HEAL", ActionHeal, 0, "Heal party", Action::cheat_keys, NONE, false, true, true },
 	{ "PARTY_INCREASE_LEVEL",
-	  ActionLevelup, 0, "Level-up party", Action::cheat_keys, NONE, false, true },
+	  ActionLevelup, 0, "Level-up party", Action::cheat_keys, NONE, false, true, true },
 	{ "CHEAT_SCREEN",
-	  ActionCheatScreen, 0, "Cheat Screen", Action::cheat_keys, NONE, true, true },
+	  ActionCheatScreen, 0, "Cheat Screen", Action::cheat_keys, NONE, true, true, true },
 	{ "PICK_POCKET",
-	  ActionPickPocket, 0, "Toggle Pick Pocket", Action::cheat_keys, NONE, false, true },
+	  ActionPickPocket, 0, "Toggle Pick Pocket", Action::cheat_keys, NONE, false, true, true },
 	{ "NPC_NUMBERS",
-	  ActionNPCNumbers, 0, "Toggle NPC Numbers", Action::cheat_keys, NONE, false, true },
+	  ActionNPCNumbers, 0, "Toggle NPC Numbers", Action::cheat_keys, NONE, false, true, true },
 	{ "GRAB_ACTOR",
-	  ActionGrabActor, 0, "Grab NPC for Cheat Screen", Action::cheat_keys, NONE, false, true },
-	{ "PLAY_MUSIC", ActionPlayMusic, 0, "Play song", Action::cheat_keys, NONE, false, true },
+	  ActionGrabActor, 0, "Grab NPC for Cheat Screen", Action::cheat_keys, NONE, false, true, true },
+	{ "PLAY_MUSIC", ActionPlayMusic, 0, "Play song", Action::cheat_keys, NONE, false, true, true },
 	{ "TOGGLE_NAKED",
-	  ActionNaked, 0, "Toggle naked mode", Action::cheat_keys, SERPENT_ISLE, false, true },
+	  ActionNaked, 0, "Toggle naked mode", Action::cheat_keys, SERPENT_ISLE, false, true, true },
 	{ "TOGGLE_PETRA",
-	  ActionPetra, 0, "Toggle Petra mode", Action::cheat_keys, SERPENT_ISLE, false, true },
+	  ActionPetra, 0, "Toggle Petra mode", Action::cheat_keys, SERPENT_ISLE, false, true, true },
 	{ "CHANGE_SKIN",
-	  ActionSkinColour, 0, "Change skin colour", Action::cheat_keys, NONE, false, true },
+	  ActionSkinColour, 0, "Change skin colour", Action::cheat_keys, NONE, false, true, true },
 	{ "NOTEBOOK", ActionNotebook, 0, "Show notebook", Action::normal_keys, 
-								NONE, false, false },
+								NONE, false, false, false },
 	{ "SOUND_TESTER",
-	  ActionSoundTester, 0, "Sound tester", Action::cheat_keys, NONE, false, true },
-	{ "TEST", ActionTest, 0, "Test", Action::dont_show, NONE, false, true },
+	  ActionSoundTester, 0, "Sound tester", Action::cheat_keys, NONE, false, true, true },
+	{ "TEST", ActionTest, 0, "Test", Action::dont_show, NONE, false, true, true },
 
 	{ "MAPEDIT_HELP",
-	  ActionMapeditHelp, 0, "List mapedit keys", Action::mapedit_keys, NONE, false, true },
+	  ActionMapeditHelp, 0, "List mapedit keys", Action::mapedit_keys, NONE, false, true, true },
 	{ "TOGGLE_MAP_EDITOR",
-	  ActionMapEditor, 0, "Toggle map-editor mode", Action::mapedit_keys, NONE, true, true },
+	  ActionMapEditor, 0, "Toggle map-editor mode", Action::mapedit_keys, NONE, true, true, true },
 	{ "SKIPLIFT_DECREMENT",
-	  ActionSkipLift, 0, "Decrement skiplift", Action::mapedit_keys, NONE, false, true },
+	  ActionSkipLift, 0, "Decrement skiplift", Action::mapedit_keys, NONE, false, true, true },
 	{ "CUT",
-	  ActionCut, 0, "Cut Selected Objects", Action::mapedit_keys, NONE, true, true },
+	  ActionCut, 0, "Cut Selected Objects", Action::mapedit_keys, NONE, true, true, true },
 	{ "COPY",
-	  ActionCopy, 0, "Copy Selected Objects", Action::mapedit_keys, NONE, true, true },
+	  ActionCopy, 0, "Copy Selected Objects", Action::mapedit_keys, NONE, true, true, true },
 	{ "PASTE",
-	  ActionPaste, 0, "Paste Selected Objects", Action::mapedit_keys, NONE, true, true },
+	  ActionPaste, 0, "Paste Selected Objects", Action::mapedit_keys, NONE, true, true, true },
 	{ "DELETE_SELECTED",
-	  ActionDeleteSelected, 0, "Delete selected", Action::mapedit_keys, NONE, true, true },
+	  ActionDeleteSelected, 0, "Delete selected", Action::mapedit_keys, NONE, true, true, true },
 	{ "MOVE_SELECTED",
-	  ActionMoveSelected, 0, "Move selected", Action::mapedit_keys, NONE, true, true },
+	  ActionMoveSelected, 0, "Move selected", Action::mapedit_keys, NONE, true, true, true },
 	{ "WRITE_MINIMAP",
-	  ActionWriteMiniMap, 0, "Write minimap", Action::mapedit_keys, NONE, false, true },
-	{ "REPAINT", ActionRepaint, 0, "Repaint screen", Action::dont_show, NONE, true, true },
-	{ "", 0, 0, "", Action::dont_show, NONE, false, false } //terminator
+	  ActionWriteMiniMap, 0, "Write minimap", Action::mapedit_keys, NONE, false, true, true },
+	{ "REPAINT", ActionRepaint, 0, "Repaint screen", Action::dont_show, NONE, true, true, true },
+	{ "", 0, 0, "", Action::dont_show, NONE, false, false, false } //terminator
 };
 
 const struct {
@@ -320,10 +321,11 @@ bool KeyBinder::DoAction(ActionType a, bool press)
 
 	// Restrict keys if avatar is sleeping/paralyzed/unconscious/dead
 	if (!a.action->allow_if_cant_act
-	    && (!Game_window::get_instance()->main_actor_can_act()
-		|| !Game_window::get_instance()->main_actor_can_act_charmed()))
+	    && !Game_window::get_instance()->main_actor_can_act())
 		return true;
-
+	if (!a.action->allow_if_cant_act_charmed
+		&& !Game_window::get_instance()->main_actor_can_act_charmed())
+		return true;
 	if (press)
 	{
 #ifndef USE_EXULTSTUDIO
